--- a/lesson2/small.css
+++ b/lesson2/small.css
@@ -1,8 +1,63 @@
 @charset "UTF-8";
 body {
-  font-size: 18px;
+  font-size: 16px;
   line-height: 1.5;
   font-family: "Didact Gothic", "Montserrat", sans-serif;
+}
+
+main {
+  max-width: 760px;
+  margin: 1.25rem auto;
+  display: grid;
+  grid-template-columns: 1fr;
+  font-size: 1rem;
+}
+
+main section h3,
+h4 {
+  color: #1d3e52;
+  align-content: center;
+  text-align: center;
+}
+
+h3 {font-size: 30px;
+    }
+
+h4 {
+    font-size: 25px;
+}
+
+p {
+  font-size: 20px;
+}
+
+main section {
+  margin: 0.5rem;
+  background-color: rgb(189, 189, 189);
+  box-shadow: 0 0 30px rgb(179, 179, 179);
+  border-radius: 10px;
+}
+
+section {
+    padding: 20px;
+}
+
+.etq-pic,
+.juluana-pic,
+.imposible-pic {
+  border-radius: 10px;
+  max-width: auto;
+  box-shadow: 0 0 20px rgb(68, 68, 68);
+  width: 100%;
+  height: auto;
+  border: 1px solid #bbb;
+}
+
+a {
+    color: white;
+    text-decoration: none;
+    align-content: center;
+    font-size: 20px;
 }
 
 header,
@@ -20,6 +75,7 @@ footer {
   color: white;
   text-align: center;
   padding: 1.5rem;
+  overflow: hidden;
 }
 
 header {
@@ -35,11 +91,4 @@ h1 {
   overflow: hidden;
 }
 
-h2 {
-  font-size: 1.2em;
-  text-align: center;
-}
-
-nav ul {
-  list-style-type: none;
 }
