--- a/lesson2/small.css
+++ b/lesson2/small.css
@@ -34,7 +34,7 @@ p {
 main section {
   margin: 0.5rem;
   background-color: rgb(189, 189, 189);
-  box-shadow: 0 0 30px rgb(179, 179, 179);
+  box-shadow: 0 0 30px rgb(196, 196, 196);
   border-radius: 10px;
 }
 
@@ -57,6 +57,7 @@ a {
     text-decoration: none;
     align-content: center;
     font-size: 20px;
+    text-shadow: 0 0 5px rgb(68, 68, 68);
 }
 
 header,
