--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -8,7 +8,7 @@
 
 .primary {
   background-color: var(--primary-color);
-  color: var(--accent1-color);
+  color: white;
 }
 .secondary {
   background-color: var(--secondary-color);
@@ -50,11 +50,14 @@ footer {
 }
 
 h1 {
+display: none;
+}
+
+h2 {
   text-align: center;
   color: #1c60aa;
 }
 
-h2,
 h3,
 h4,
 h5 {
@@ -73,28 +76,22 @@ td {
   text-align: center;
 }
 
-nav {
+.top-nav a {
   background-color: var(--primary-color);
-  text-align: center;
-  font-size: 18px;
-}
-
-nav li a {
+  justify-content: center;
+  font-size: 16px;
   display: block;
+  text-align: center;
   text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.3);
-}
-
-nav a {
-  text-decoration: none;
-}
-
-nav li:hover {
-  background-color: #1c60aa;
-}
-
-nav a:link,
-nav a:visited {
   color: white;
+  color: white;
+  text-decoration: none;
+  padding: .5rem;
+}
+
+nav a:hover {
+  background-color: #1c60aa;
+  align-items: center;
 }
 
 nav ul {
@@ -102,7 +99,6 @@ nav ul {
   margin: 0;
   height: 100%;
   padding: 0;
-  overflow: hidden;
 }
 
 #logo img {
