--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -26,3 +26,27 @@
     }
   }
   
+
+  nav a:hover {
+    background-color: #1c60aa;
+    align-items: center;
+  }
+  
+  nav ul {
+    list-style: none;
+    margin: 0;
+    height: 100%;
+    padding: 0;
+  }
+
+  .top-nav a {
+    background-color: var(--primary-color);
+    justify-content: center;
+    font-size: 16px;
+    display: block;
+    text-align: center;
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.3);
+    color: white;
+    text-decoration: none;
+    padding: 0.5rem;
+  }
