--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -1,34 +1,27 @@
 @media only screen and (min-width: 32.5em) {
-    header {
-      display: grid;
-      grid-template-columns: 250px 1fr;
-    }
-  
-    header,
-    main,
-    footer {
-      margin: 1.25rem auto;
-    }
 
-    header h1 {
-      margin-top: 0;
-    }
-    nav ul {
-      grid-column: 2/3;
-    }
-  
-    td {
-      height: 250px;
-    }
-  
-    nav ul {
-      display: flex;
-    }
-    nav ul li {
-      flex: 1 1 auto;
-    }
-    main img {
-      flex: 1 1 auto;
-    }
+
+  .navigation li {
+    display: block;
+    flex: 1 1 100%;
   }
-  
+
+  .responsive li {
+    display: block;
+  }
+
+
+  .navigation {
+    display: flex;
+  }
+  .navigation li {
+    display: block; /* change state in small view */
+    flex: 1 1 auto;
+  }
+  .navigation a {
+    text-align: center;
+  }
+  .navigation li:first-child {
+    display: none;
+  }
+}
