--- a/css/small.css
+++ b/css/small.css
@@ -47,3 +47,63 @@ h2 {
 nav ul {
   list-style-type: none;
 }
+
+
+
+
+
+
+
+
+
+
+
+nav {
+  grid-column: 3 / 6;
+	grid-row: 1 / 2;
+  
+  margin: 0 auto;
+  max-width: 760px;
+  background-color: var(--primary-color);
+  font-size: 16px;
+  display: block;
+  text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.3);
+  justify-content: center;
+}
+.navigation {
+  list-style: none;
+  padding: 0;
+}
+.navigation li:first-child {
+  display: block;
+}
+.navigation li {
+  display: none;
+}
+.navigation a {
+  display: block;
+  padding: 0.75rem;
+  text-align: center;
+  text-decoration: none;
+  color: white;
+  font-weight: 700;
+  transition: 0.5s;
+  font-size: clamp(1rem, 2vmin, 1.5rem);
+}
+
+.navigation a:hover {
+  color: white;
+  background-color: var(--secondary-color);
+}
+
+.responsive li {
+  display: block;
+}
+
+
+
+
+
+
+
+
