--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,52 +1,40 @@
-@media only screen and (min-width: 32.5em) {
-    header {
-      display: grid;
-      grid-template-columns: 250px 1fr;
-    }
-  
-    header h1 {
-      margin-top: 0;
-    }
-    nav ul {
-      grid-column: 2/3;
-    }
-  
-    td {
-      height: 250px;
-    }
-  
-    nav ul {
-      display: flex;
-    }
-    nav ul li {
-      flex: 1 1 auto;
-    }
-    main img {
-      flex: 1 1 auto;
-    }
-  }
-  
+@media only screen and (min-width: 1100px) {
 
-  nav a:hover {
-    background-color: #1c60aa;
-    align-items: center;
-  }
-  
   nav ul {
-    list-style: none;
-    margin: 0;
-    height: 100%;
-    padding: 0;
+    display: flex;
   }
 
-  .top-nav a {
-    background-color: var(--primary-color);
-    justify-content: center;
-    font-size: 16px;
-    display: block;
-    text-align: center;
-    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.3);
-    color: white;
-    text-decoration: none;
-    padding: 0.5rem;
+  main {
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
   }
+  .callToAction {
+    grid-area: 1 / 2 / 3 / 3;
+  }
+
+  .spotLights {
+    grid-area: 1 / 3 / 4 / 4;
+    align-items: center;
+    
+  }
+
+  .spotLight3 {
+    display: grid;
+    margin: .1rem;
+  }
+
+  .join {
+    grid-area: 3 / 1 / 4 / 2;
+  }
+  .news {
+    grid-area: 3 / 2 / 4 / 3;
+  }
+  .event {
+    grid-area: 1 / 1 / 2 / 2;
+  }
+  .weather {
+    grid-area: 2 / 1 / 3 / 2;
+  }
+}
