--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -1,27 +1,46 @@
 @media only screen and (min-width: 32.5em) {
 
-
-  .navigation li {
-    display: block;
-    flex: 1 1 100%;
+  nav {
+    grid-column: 3 / 6;
+    grid-row: 1 / 2;
+  }
+  
+  #logo img {
+    padding-left: 3rem;
   }
 
-  .responsive li {
-    display: block;
+  main {
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: repeat(5, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+  }
+  .callToAction {
+    grid-area: 1 / 1 / 2 / 3;
+  }
+  .news {
+    grid-area: 2 / 1 / 3 / 3;
+  }
+  .spotLights {
+    grid-area: 3 / 1 / 4 / 3;
+  }
+  .spotLight1 {
+    margin: .1rem;
+  }
+  .spotLight2 {
+    margin: .1rem;
+  }
+  .join {
+    display: grid;
+    grid-area: 4 / 1 / 5 / 3;
+  }
+  .event {
+    display: grid;
+    grid-area: 5 / 1 / 6 / 2;
   }
 
+  .weather {
+    grid-area: 5 / 2 / 6 / 3;
+}
 
-  .navigation {
-    display: flex;
-  }
-  .navigation li {
-    display: block; /* change state in small view */
-    flex: 1 1 auto;
-  }
-  .navigation a {
-    text-align: center;
-  }
-  .navigation li:first-child {
-    display: none;
-  }
 }
