--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -1,10 +1,9 @@
 @media only screen and (min-width: 32.5em) {
-
   nav {
     grid-column: 3 / 6;
     grid-row: 1 / 2;
   }
-  
+
   #logo img {
     padding-left: 3rem;
   }
@@ -25,10 +24,10 @@
     grid-area: 3 / 1 / 4 / 3;
   }
   .spotLight1 {
-    margin: .1rem;
+    margin: 0.1rem;
   }
   .spotLight2 {
-    margin: .1rem;
+    margin: 0.1rem;
   }
   .join {
     display: grid;
@@ -41,6 +40,5 @@
 
   .weather {
     grid-area: 5 / 2 / 6 / 3;
-}
-
+  }
 }
