--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,4 +1,26 @@
 @media only screen and (min-width: 1100px) {
+  .navigation li {
+    display: block;
+    flex: 1 1 100%;
+  }
+
+  .responsive li {
+    display: block;
+  }
+
+  .navigation {
+    display: flex;
+  }
+  .navigation li {
+    display: block;
+    flex: 1 1 auto;
+  }
+  .navigation a {
+    text-align: center;
+  }
+  .navigation li:first-child {
+    display: none;
+  }
 
   nav ul {
     display: flex;
@@ -17,12 +39,11 @@
   .spotLights {
     grid-area: 1 / 3 / 4 / 4;
     align-items: center;
-    
   }
 
   .spotLight3 {
     display: grid;
-    margin: .1rem;
+    margin: 0.1rem;
   }
 
   .join {
