--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,61 +1,78 @@
 @media only screen and (min-width: 1100px) {
-  .navigation li {
-    display: block;
-    flex: 1 1 100%;
-  }
+    header {
+        background-color: var(--primary-color);
+        padding: 1;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        align-items: center;
+        font-size: 1em;
+        width: 100%;
+      }
+      
+      .today {
 
-  .responsive li {
-    display: block;
-  }
+        grid-column: 1 / 3;
+      }
+      
+      #logo img {
+        grid-column: 1 / 2;
+        padding: 2rem;
+      }
+      
+      .social-media {
+        padding: 2rem;
+          grid-column: 3/ 4;
+      }
+      
+      nav {
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+      }
+      
+      .today {
 
-  .navigation {
-    display: flex;
-  }
-  .navigation li {
-    display: block;
-    flex: 1 1 auto;
-  }
-  .navigation a {
-    text-align: center;
-  }
-  .navigation li:first-child {
-    display: none;
-  }
+        grid-column: 1 / 4;
+      }
 
-  nav ul {
-    display: flex;
-  }
+    main {
+        margin: .5em auto;
+		max-width: 800px;
+      grid-template-columns: 1fr 2fr 1fr;
+      grid-template-rows: repeat(3, 1fr);
+      grid-column-gap: 10px;
+      grid-row-gap: 10px;
+    }
+    .callToAction {
+      grid-area: 1 / 2 / 3 / 3;
+    }
+  
+    .spotLights {
+      grid-area: 1 / 3 / 4 / 4;
+      align-items: center;
+    }
+  
+    .spotLight3 {
+      display: grid;
+      margin: 0.5rem;
+    }
+  
+    .join {
+      grid-area: 3 / 1 / 4 / 2;
+    }
+    .news {
+      grid-area: 3 / 2 / 4 / 3;
+    }
+    .event {
+      grid-area: 1 / 1 / 2 / 2;
+    }
+    .weather {
+      grid-area: 2 / 1 / 3 / 2;
+    }
 
-  main {
-    grid-template-columns: 1fr 2fr 1fr;
-    grid-template-rows: repeat(3, 1fr);
-    grid-column-gap: 10px;
-    grid-row-gap: 10px;
-  }
-  .callToAction {
-    grid-area: 1 / 2 / 3 / 3;
-  }
+    hr {
+        margin-right: 20rem;
+        margin-left: 20rem;
+      }
 
-  .spotLights {
-    grid-area: 1 / 3 / 4 / 4;
-    align-items: center;
   }
-
-  .spotLight3 {
-    display: grid;
-    margin: 0.1rem;
-  }
-
-  .join {
-    grid-area: 3 / 1 / 4 / 2;
-  }
-  .news {
-    grid-area: 3 / 2 / 4 / 3;
-  }
-  .event {
-    grid-area: 1 / 1 / 2 / 2;
-  }
-  .weather {
-    grid-area: 2 / 1 / 3 / 2;
-  }
-}
+  
