--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -1,44 +1,214 @@
-@media only screen and (min-width: 32.5em) {
-  nav {
-    grid-column: 3 / 6;
-    grid-row: 1 / 2;
+/* @media only screen and (min-width: 32.5em) {
+  .navigation {
+    display: flex;
+  }
+  .navigation li {
+    display: block;
+    flex: 1 1 auto;
+  }
+  .navigation a {
+    text-align: center;
+  }
+  .navigation li:first-child {
+    display: none;
   }
 
-  #logo img {
-    padding-left: 3rem;
-  }
 
+
+
+
+
+
+
+
+
+
+
+
+
+  
+  
   main {
-    grid-template-columns: 3fr 1fr;
-    grid-template-rows: repeat(5, 1fr);
-    grid-column-gap: 10px;
-    grid-row-gap: 10px;
+    font-size: 1rem;
   }
+  
+  main div {
+    display: flex;
+  }
+  
+
+  
+  /* home content 
+  
   .callToAction {
-    grid-area: 1 / 1 / 2 / 3;
+    grid-area: 1 / 1 / 2 / 2;
   }
   .news {
-    grid-area: 2 / 1 / 3 / 3;
+    grid-area: 4 / 1 / 5 / 2;
   }
   .spotLights {
-    grid-area: 3 / 1 / 4 / 3;
+    grid-area: 5 / 1 / 6 / 2;
+    background-color: #616162;
+    padding: 0.7rem 2vw;
   }
   .spotLight1 {
-    margin: 0.1rem;
+    margin: 0 auto;
   }
   .spotLight2 {
-    margin: 0.1rem;
+    margin: 0 auto;
+    margin-top: 5px;
   }
-  .join {
-    display: grid;
-    grid-area: 4 / 1 / 5 / 3;
+  .spotLight3 {
+    display: flex;
   }
   .event {
-    display: grid;
-    grid-area: 5 / 1 / 6 / 2;
+    grid-area: 2 / 1 / 3 / 2;
+  }
+  
+  .weather {
+    grid-area: 3 / 1 / 4 / 2;
+  }
+  .join {
+    display: flex;
+  }
+  
+  /* Header/navigation style
+  
+  header {
+    grid-template-columns: repeat(2, 1fr);
+
+  }
+  
+  .icons {
+    padding-right: 30px;
+	justify-self: right;
+	display: flex;
+  }
+  
+  nav {
+    grid-column: 1 / 3;
+    grid-row: 2 / 3;
+  }
+  .navigation {
+    list-style: none;
+    padding: 0;
+  }
+  .navigation li:first-child {
+    display: block;
+  }
+  .navigation li {
+    display: none;
+  }
+  .navigation a {
+    display: block;
+    padding: 0.75rem;
+    text-align: center;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    font-weight: 700;
+    transition: 0.5s;
+    font-size: 1.5rem;
+  }
+  
+  .navigation a:hover {
+    color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
+  }
+  
+  .responsive li {
+    display: block;
+  }
+  
+  /* Footer
+  
+
+  
+
+
+
+
+
+}
+ */
+
+
+ @media only screen and (min-width: 32.5em) {
+
+  strong {
+    font-size: auto;
   }
 
-  .weather {
-    grid-area: 5 / 2 / 6 / 3;
+  
+    #logo img {
+      padding-left: 2rem;
+    }
+  
+
+    .navigation li {
+        display: block;
+        flex: 1 1 100%;
+      }
+    
+      .responsive li {
+        display: block;
+      }
+    
+      .navigation {
+        display: flex;
+      }
+      .navigation li {
+        display: block;
+        flex: 1 1 auto;
+      }
+      .navigation a {
+        text-align: center;
+      }
+      .navigation li:first-child {
+        display: none;
+      }
+    
+      nav ul {
+        display: flex;
+      }
+
+
+    main {
+      grid-template-columns: 3fr 1fr;
+      grid-template-rows: repeat(5, 1fr);
+      grid-column-gap: 10px;
+      grid-row-gap: 10px;
+    }
+    .callToAction {
+      grid-area: 1 / 1 / 2 / 3;
+    }
+    .news {
+      grid-area: 2 / 1 / 3 / 3;
+    }
+    .spotLights {
+      grid-area: 3 / 1 / 4 / 3;
+    }
+    .spotLight1 {
+      margin: .5rem;
+    }
+    .spotLight2 {
+      margin: 0.5rem;
+    }
+    .join {
+      display: grid;
+      grid-area: 4 / 1 / 5 / 3;
+    }
+    .event {
+  
+      grid-area: 5 / 1 / 6 / 2;
+    }
+  
+    .weather {
+      grid-area: 5 / 2 / 6 / 3;
+    }
+
+    hr {
+        margin-right: 5rem;
+        margin-left: 5rem;
+      }
   }
-}
+  
