--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -1,6 +1,9 @@
 @charset "UTF-8";
+
+/* color */
+
 :root {
-  --primary-color: #616162;
+  --primary-color: #000000;
   --secondary-color: #1c60aa;
   --accent1-color: #43c0cc;
   --accent2-color: #79d8bf;
@@ -21,43 +24,26 @@
   background-color: var(--accent2-color);
 }
 
+/* basic design */
+
 header,
 nav,
 main,
 footer {
-  max-width: 760px;
-}
-header,
-main,
-footer {
-  margin: 1.25rem auto;
+  font-family: "Hind", sans-serif;
 }
 
-header {
-  background-color: var(--primary-color);
-
-  padding: 30px 0;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  align-items: center;
-}
 main {
+  font-size: 1.25rem;
   display: grid;
-  row-gap: 5px;
-  padding: 1rem;
+  row-gap: 0.5rem;
+  padding: 0.5rem;
 }
 
 main div {
   background-color: #43c0cc;
   display: block;
-  padding: 3.5rem 2vw;
-}
-
-footer {
-  background-color: var(--primary-color);
-  color: white;
-  text-align: center;
-  padding: 0.5rem;
+  padding: 1rem;
 }
 
 h1 {
@@ -75,50 +61,123 @@ h5 {
   font-size: 1.5em;
 }
 
-body {
-  background-color: white;
+/* home content */
+
+strong {
+  font-size: 1.75rem;
+}
+
+.callToAction {
+  display: grid;
+  grid: 1fr 1fr / 1fr 1fr;
+}
+
+.callToAction img {
+  grid-column: 1/3;
+  grid-row: 1/3;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+}
+
+.callToAction h2 {
+  grid-column: 1/3;
+  grid-row: 1/2;
+  padding: 1.5rem;
+  color:white;
+  background-color:#00000086;
   margin: 0;
-  font-family: "Hind", sans-serif;
+  width:auto;
+  height: fit-content;
+  font-size: 1.9rem;
+}
+
+.callToAction button {
+  grid-column: 2/3;
+  grid-row: 2/3;
+  align-self: end;
+  padding: 10px;
+  border-radius: 10px;
+  margin-bottom: 1.5rem;
+  margin-right: 1.5rem;
+  font-size: .9em;
+  color: #ffffff;
+  background-color:#1c60aa;
+}
+
+
+
+.news {
+  grid-area: 4 / 1 / 5 / 2;
+}
+.spotLights {
+  grid-area: 5 / 1 / 6 / 2;
+  background-color: #000000;
+  padding: 0.5rem;
+}
+.spotLight1 {
+  margin: 0 auto;
+}
+.spotLight2 {
+  margin: 0 auto;
+  margin-top: 5px;
+}
+.spotLight3 {
+  display: none;
+}
+.event {
+  text-align: center;
+  grid-area: 2 / 1 / 3 / 2;
+}
+
+.weather {
+  grid-area: 3 / 1 / 4 / 2;
+}
+.join {
+  display: none;
+}
+
+/* Header/navigation style*/
+
+header {
+  background-color: var(--primary-color);
+  padding: 1;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  font-size: 1em;
+  width: 100%;
+}
+
+.today {
+  color: white;
+  font-size: 1.25rem;
+  margin: 0.5rem;
+  padding: 10px;
+  text-align: center;
+  grid-column: 1 / 3;
 }
 
 #logo img {
   width: 10rem;
   grid-column: 1 / 2;
-  grid-row: 1 / 2;
-  justify-self: center;
   padding: 1rem;
 }
 
-.icons {
-  width: 2.25rem;
-  padding: 0.5rem;
-
-  padding-right: 30px;
-  grid-column: 4 / 6;
-  grid-row: 1 / 2;
+.social-media {
+  padding-right: 20px;
+  grid-column: 2/ 3;
   justify-self: end;
   display: flex;
 }
 
-.footer-logo {
-  width: 120px;
-}
-
-hr {
-  color: white;
+.icons {
+  width: 2.25rem;
 }
 
 nav {
-  grid-column: 3 / 6;
-  grid-row: 1 / 2;
-
-  margin: 0 auto;
-  max-width: 760px;
-  background-color: var(--primary-color);
-  font-size: 16px;
-  display: block;
-  text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.3);
-  justify-content: center;
+  grid-column: 1 / 6;
+  grid-row: 2 / 3;
 }
 .navigation {
   list-style: none;
@@ -135,51 +194,29 @@ nav {
   padding: 0.75rem;
   text-align: center;
   text-decoration: none;
-  color: white;
+  color: rgb(255, 255, 255);
   font-weight: 700;
   transition: 0.5s;
-  font-size: clamp(1rem, 2vmin, 1.5rem);
+  font-size: 1.5rem;
 }
 
 .navigation a:hover {
-  color: white;
-  background-color: var(--secondary-color);
+  color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
 }
 
 .responsive li {
   display: block;
 }
 
-.callToAction {
-  grid-area: 1 / 1 / 2 / 2;
-}
-.news {
-  grid-area: 4 / 1 / 5 / 2;
-}
-.spotLights {
-  grid-area: 5 / 1 / 6 / 2;
-  background-color: #616162;
-  padding: 0.7rem 2vw;
-}
-.spotLight1 {
-  margin: 0 auto;
-}
-.spotLight2 {
-  margin: 0 auto;
-  margin-top: 5px;
-}
-.spotLight3 {
-  display: none;
-}
-.event {
-  grid-area: 2 / 1 / 3 / 2;
-}
+/* Footer */
 
-.weather {
-  grid-area: 3 / 1 / 4 / 2;
-}
-.join {
-  display: none;
+footer {
+  background-color: var(--primary-color);
+  color: white;
+  text-align: center;
+  padding-bottom: 0.5rem;
+  width: 100%;
 }
 
 .map {
@@ -188,8 +225,24 @@ nav {
   color: white;
 }
 
-date {
+.footer-logo {
+  width: 120px;
+  padding-top: 1rem;
+}
+
+hr {
   color: white;
-  margin: 0.5rem;
-  padding: 0.75rem;
+  margin: 1rem;
+}
+
+/* Popup */
+
+#banner {
+  display: none;
+  background-color: #8de0e7;
+  border: black;
+  color: #000;
+  padding: 0.2rem;
+  text-align: center;
+  font-size: 1.1rem;
 }
