--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,7 +1,7 @@
 @media only screen and (min-width: 1100px) {
     header {
         background-color: var(--primary-color);
-        padding: 1;
+        padding: 1rem;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         align-items: center;
@@ -49,11 +49,14 @@
     .spotLights {
       grid-area: 1 / 3 / 4 / 4;
       align-items: center;
+      text-align: center;
     }
   
     .spotLight3 {
       display: grid;
       margin: 0.5rem;
+      align-items: center;
+      text-align: center;
     }
   
     .join {
