--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -1,10 +1,7 @@
 @media only screen and (min-width: 32.5em) {
-
-main {
-  display: grid;
-        
-        grid-row-gap: 1em;
-}
+  main {
+    grid-column-gap: .5em;
+  }
 
   .join {
     grid-column: 1/4;
@@ -21,20 +18,16 @@ main {
     border-radius: 10px;
     width: 50%;
     margin: 0.25em auto;
-    font-weight:bolder;
+    font-weight: bolder;
   }
-
-
-
 
   .callToAction button {
     grid-column: 1/3;
-    align-self:center;
+    align-self: center;
     padding: 20px;
     margin-left: 1.5rem;
     font-size: 1.5rem;
   }
-
 
   #logo img {
     padding-left: 2rem;
@@ -67,37 +60,34 @@ main {
     display: flex;
   }
 
- 
-
-
-
   .callToAction {
     grid-column: 1/4;
-        grid-row: 1/2;
+    grid-row: 1/2;
   }
   .news {
     grid-column: 1/4;
-        grid-row: 2/3;
+    grid-row: 2/3;
   }
   .spotLights {
-    grid-area: 3 / 1 / 4 / 3;
+    grid-column: 1/4;
+    grid-row: 3/4;
   }
   .spotLight1 {
     margin: 0.5rem;
+    
   }
   .spotLight2 {
     margin: 0.5rem;
   }
-  
 
   .event {
-    grid-column: 1/3;
-        grid-row: 5/6;
+    grid-column: 1/2;
+    grid-row: 5/6;
   }
 
   .weather {
     grid-column: 3/4;
-        grid-row: 5/6;
+    grid-row: 5/6;
   }
 
   hr {
