--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -45,7 +45,6 @@ main div {
   background-color: rgb(212, 209, 209);
   padding: 1rem;
   text-align: center;
-  
 }
 
 h1 {
@@ -117,8 +116,8 @@ strong {
 .news {
   grid-area: 4 / 1 / 5 / 1;
 }
+
 .spotLights {
-  
   text-align: center;
   grid-area: 5 / 1 / 6 / 2;
   background-color: #000000;
@@ -127,9 +126,7 @@ strong {
 
 .spotLights img {
   width: 50px;
-
   padding: 0;
-
 }
 
 .spotLight1 {
@@ -142,6 +139,7 @@ strong {
 .spotLight3 {
   display: none;
 }
+
 .event {
   text-align: center;
   grid-area: 2 / 1 / 3 / 2;
@@ -154,7 +152,6 @@ strong {
 .weatherimg {
   width: 4em;
 }
-
 
 .join {
   display: none;
@@ -194,7 +191,7 @@ header {
 }
 
 .icons {
-  padding: .4em;
+  padding: 0.4em;
   width: 2.25rem;
 }
 
@@ -269,4 +266,3 @@ hr {
   text-align: center;
   font-size: 1.1rem;
 }
-
