--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -15,10 +15,11 @@
     color: #ffffff;
     background-color: #114277;
     padding: 15px;
-    border-radius: 10px;
+    border-radius: 8px;
     width: 50%;
     margin: 0.25em auto;
     font-weight: bolder;
+    border: none;
   }
 
   .callToAction button {
@@ -81,7 +82,7 @@
   }
 
   .event {
-    grid-column: 1/2;
+    grid-column: 1/3;
     grid-row: 5/6;
   }
 
