--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,98 +1,159 @@
 @media only screen and (min-width: 1100px) {
-    header {
-        background-color: var(--primary-color);
-        padding: 1rem;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        align-items: center;
-        font-size: 1em;
-        width: 100%;
-      }
-      
-      .today {
 
-        grid-column: 1 / 3;
-      }
-      
-      #logo img {
-        grid-column: 1 / 2;
-        padding: 2rem;
-      }
-      
-      .social-media {
-        padding: 2rem;
-          grid-column: 3/ 4;
-      }
-      
-      nav {
-        grid-column: 2 / 3;
-        grid-row: 1 / 2;
-      }
-      
-      .today {
+  main {
+    margin: 0.5em auto;
+    max-width: 800px;
 
-        grid-column: 1 / 4;
-      }
+    grid-template-rows: repeat(2, 1fr);
 
-    main {
-        margin: .5em auto;
-		max-width: 800px;
-      grid-template-columns: 1fr 2fr 1fr;
-      grid-template-rows: repeat(3, 1fr);
-      grid-column-gap: 10px;
-      grid-row-gap: 10px;
-    }
-    .callToAction {
-      grid-area: 1 / 2 / 3 / 3;
-    }
-  
-    .spotLights {
-      grid-area: 1 / 3 / 4 / 4;
-      align-items: center;
-      text-align: center;
-    }
-
-    .spotLights strong {
-      font-size: 1.2em;
-    }
-    
-    .spotLight3 {
-      display: grid;
-      margin: 0.5rem;
-      align-items: center;
-      text-align: center;
-    }
-  
-    .join {
-      grid-area: 3 / 1 / 4 / 2;
-    }
-    .join button {
-      padding: 15px;
-      width: 75%;
-    }
-
-    .news {
-      
-      grid-area: 3 / 2 / 4 / 3;
-    }
-    .event {
-      grid-area: 1 / 1 / 2 / 2;
-    }
-    .weather {
-      grid-area: 2 / 1 / 3 / 2;
-    }
-
-    hr {
-        margin-right: 20rem;
-        margin-left: 20rem;
-      }
-      .discover-content {
-        display: flex;
-        display: flex; flex-wrap: wrap;
-      }
-      article {
-        width: 22.5em;
-
-      }
   }
-  
+  header {
+    background-color: var(--primary-color);
+    padding: 1rem;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    font-size: 1em;
+    width: 100%;
+  }
+
+  .today {
+    grid-column: 1 / 3;
+  }
+
+  #logo img {
+    grid-column: 1 / 2;
+    padding: 2rem;
+  }
+
+  .social-media {
+    padding: 2rem;
+    grid-column: 3/ 4;
+  }
+
+  nav {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+  }
+
+  .today {
+    grid-column: 1 / 4;
+  }
+
+  .main {
+    margin: 0.5em auto;
+    max-width: 800px;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+  }
+  .callToAction {
+    grid-area: 1 / 2 / 3 / 3;
+  }
+
+  .spotLights {
+    grid-area: 1 / 3 / 4 / 4;
+    align-items: center;
+    text-align: center;
+  }
+
+  .spotLights strong {
+    font-size: 1.2em;
+  }
+
+  .spotLight3 {
+    display: grid;
+    margin: 0.5rem;
+    align-items: center;
+    text-align: center;
+  }
+
+  .join {
+    grid-area: 3 / 1 / 4 / 2;
+  }
+  .join button {
+    padding: 15px;
+    width: 75%;
+  }
+
+  .news {
+    grid-area: 3 / 2 / 4 / 3;
+  }
+  .event {
+    grid-area: 1 / 1 / 2 / 2;
+  }
+  .weather {
+    grid-area: 2 / 1 / 3 / 2;
+  }
+
+  hr {
+    margin-right: 20rem;
+    margin-left: 20rem;
+  }
+  .discover-content {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  article {
+    width: 22.5em;
+    margin-bottom: 10px;
+  }
+
+  /* Join page */
+
+
+  .testimonial-one {
+    display: block;
+    max-width: 13em;
+    font-size: 0.75em;
+    grid-column: 1/2;
+    grid-row: 1/2;
+    margin-left: 2em;
+    max-height: 42.5em;
+    margin-top: 20em;
+  }
+
+  .testimonial-four {
+    display: block;
+    max-width: 13em;
+    font-size: 0.75em;
+    grid-column: 3/4;
+    grid-row: 1/2;
+    margin-left: 2em;
+    max-height: 40em;
+    margin-top: 22.5em;
+  }
+
+  .testimonial-two {
+    display: block;
+    max-width: 13em;
+    font-size: 0.75em;
+    grid-column: 1/2;
+    grid-row: 2/3;
+    margin-left: 2em;
+    max-height: 31em;
+  }
+
+  .testimonial-three {
+    display: block;
+    max-width: 13em;
+    font-size: 0.75em;
+    grid-column: 3/4;
+    grid-row: 2/3;
+    margin-left: 2em;
+    max-height: 36em;
+  }
+
+
+  .thank-you-main {
+    display: flex;
+    padding: 2em;
+  }
+
+  .join-form {
+    grid-column: 2/3;
+    grid-row: 1/3;
+    margin-left: 1.2em;
+  }
+
+}
