--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -28,11 +28,12 @@
 header,
 nav,
 main,
-footer {
+footer,
+body {
   font-family: "Hind", sans-serif;
 }
 
-main {
+.main {
   display: grid;
   grid-auto-rows: minmax(min-content, max-content);
   margin-bottom: 0.5rem;
@@ -41,10 +42,12 @@ main {
 }
 
 main div {
-  background-color: rgb(212, 209, 209);
+  background-color: white;
   padding: 1rem;
   text-align: center;
   border-radius: 8px;
+  border: 2px #51a5ff solid;
+  font-size: 1em;
 }
 
 h1 {
@@ -82,6 +85,7 @@ strong {
   grid-column: 1/3;
   grid-row: 1/6;
   z-index: -1;
+  border-radius: 8px;
 }
 
 .callToAction picture img {
@@ -131,6 +135,7 @@ button:hover {
   grid-area: 5 / 1 / 6 / 2;
   background-color: #000000;
   padding: 0.5rem;
+  border: none;
 }
 
 .spotLights img {
@@ -150,6 +155,7 @@ button:hover {
 }
 
 .event {
+  display: table;
   text-align: center;
   grid-area: 2 / 1 / 3 / 2;
 }
@@ -291,7 +297,6 @@ article {
   border: 2px #e5e5e5 solid;
   padding-left: 0.75em;
   padding-right: 0.75em;
-
   font-weight: bold;
   font-size: 1em;
   text-align: center;
@@ -311,7 +316,7 @@ img[data-src] {
 
 img {
   filter: blur(0em);
-  transition: filter 1.5s;
+  transition: filter 0.5s;
 }
 
 .discover-title {
@@ -327,3 +332,118 @@ img {
 
 /* Join Page */
 
+.join-main {
+  display: grid;
+  grid-auto-rows: minmax(min-content, max-content);
+  margin-bottom: 0.5rem;
+  row-gap: 0.5rem;
+  padding: 0.5rem;
+}
+
+.testimonial-one {
+  display: none;
+}
+
+.testimonial-two {
+  display: none;
+}
+
+.testimonial-three {
+  display: none;
+}
+
+.testimonial-four {
+  display: none;
+}
+
+.thank-you:hover {
+  box-shadow: 0 0 15px rgb(95, 95, 95);
+}
+.thank-you {
+  padding: 0.5em;
+}
+
+/* Form */
+
+form fieldset {
+  margin: 10px;
+  border: 2px solid #3585da;
+  border-radius: 8px;
+  padding: 1rem;
+  padding-inline-end: 2rem;
+}
+
+form legend {
+  color: white;
+  padding: 0.7rem;
+  background-color: #000;
+  border-radius: 8px;
+}
+
+form label.top,
+form div {
+  display: block;
+  padding-top: 1rem;
+  padding-right: 1rem;
+}
+
+form label.top input,
+form label.top select {
+  -webkit-appearance: none;
+  display: block;
+  font-size: 1rem;
+  border: solid 1px #999;
+  border-radius: 80px;
+  padding: 0.75rem;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+form label.sbs {
+  display: block;
+  padding: 0.75rem 0;
+  color: #1c60aa;
+}
+
+form textarea {
+  width: 103%;
+  background-color: rgba(0, 0, 0, 0.1);
+  padding: 0.2rem;
+}
+
+form input.submitBtn {
+display: grid;
+  border: none;
+  background-color: #000;
+  color: white;
+  border-radius: 8px;
+  padding: 0.75rem 1.5rem;
+  margin: 0 0 2rem 2%;
+  width: 95%;
+  max-width: 20rem;
+
+}
+
+form input.submitBtn:hover {
+  font-weight: bolder;
+  cursor: pointer;
+  background-color: #1c60aa;
+  box-shadow: 0 0 15px rgb(95, 95, 95);
+
+}
+
+form label.top input:required {
+  border: #1c60aa solid 2.3px;
+}
+
+.level {
+  font-weight: bold;
+}
+
+.cost {
+  background-color: #1c60aa;
+  color: white;
+  padding: 0.25rem 1rem;
+  margin-left: 0.5rem;
+  border-radius: 10px;
+}
