--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -447,3 +447,8 @@ form label.top input:required {
   margin-left: 0.5rem;
   border-radius: 10px;
 }
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+}
