--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,11 +1,9 @@
 @media only screen and (min-width: 1100px) {
-
   main {
     margin: 0.5em auto;
     max-width: 800px;
 
     grid-template-rows: repeat(2, 1fr);
-
   }
   header {
     background-color: var(--primary-color);
@@ -101,7 +99,6 @@
 
   /* Join page */
 
-
   .testimonial-one {
     display: block;
     max-width: 13em;
@@ -144,7 +141,6 @@
     max-height: 36em;
   }
 
-
   .thank-you-main {
     display: flex;
     padding: 2em;
@@ -153,7 +149,9 @@
   .join-form {
     grid-column: 2/3;
     grid-row: 1/3;
-    margin-left: 1.2em;
+    margin-left: 1em;
   }
-
+  .card-view {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
