--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -176,5 +176,13 @@
     grid-column: 2/3;
   
     }
+    .list-view section {
+      grid-template-columns: repeat(4, 1fr);
+  }
+
+  .card-view {
+      grid-template-columns: repeat(2, 1fr);
+  }
+
 
 }
