--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -46,7 +46,8 @@
     grid-row-gap: 10px;
   }
   .callToAction {
-    grid-area: 1 / 2 / 3 / 3;
+    grid-row: 1/3;
+    grid-column: 2/3;
   }
 
   .spotLights {
@@ -67,27 +68,41 @@
   }
 
   .join {
-    grid-area: 3 / 1 / 4 / 2;
+    grid-row: 3/4;
+    grid-column: 1/2;
   }
   .join button {
     padding: 15px;
-    width: 75%;
+    width: 100%;
   }
 
   .news {
-    grid-area: 3 / 2 / 4 / 3;
+    grid-row: 3/4;
+    grid-column: 2/3;
   }
   .event {
-    grid-area: 1 / 1 / 2 / 2;
+    grid-row: 1/2;
+    grid-column: 1/2;
   }
   .weather {
-    grid-area: 2 / 1 / 3 / 2;
+    grid-row: 2/3;
+    grid-column: 1/2;
   }
 
-  hr {
-    margin-right: 20rem;
-    margin-left: 20rem;
+  .weather img {
+    width: 75px;
   }
+
+  .weather h4 {
+    font-size: large;
+    padding-top: 0;
+  }
+
+  #current-temp {
+    padding-left: 0px;
+  }
+
+
   .discover-content {
     display: flex;
     flex-wrap: wrap;
