--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -43,8 +43,6 @@ strong {
 .callToAction {
   display: grid;
   grid: 1fr 1fr / 1fr 1fr;
-
-
 }
 
 .callToAction picture {
@@ -93,15 +91,74 @@ button:hover {
   cursor: pointer;
 }
 
-.news {
-  grid-area: 4 / 1 / 5 / 1;
-
+.news,
+.weather,
+.event,
+.join {
   background-color: white;
   padding: 1rem;
   text-align: center;
   border-radius: 8px;
   border: 2px #e5e5e5 solid;
   font-size: 1em;
+}
+
+.news {
+  grid-area: 4 / 1 / 5 / 1;
+}
+
+.spotlights {
+  background-color: rgb(0, 38, 77);
+  text-align: center;
+  border-radius: 8px;
+  padding: 10px;
+}
+
+.spotlight:last-child {
+  display: none;
+}
+
+.spotlight img {
+  width: 50%;
+  padding-top: 10px;
+}
+
+.spotlight {
+  background-color: white;
+  border-radius: 8px;
+
+  margin-bottom: 0.5rem;
+  padding: 1em;
+  font-size: larger;
+}
+
+.spotlight p {
+  color: rgb(0, 73, 146);
+  font-weight: bolder;
+}
+
+.join-button a {
+  padding: 1rem;
+  text-decoration: none;
+  color: white;
+}
+
+.join button {
+  display: block;
+  padding: 1rem;
+  background-color: rgb(0, 73, 146);
+  border-radius: 8px;
+  margin: 0.25em auto;
+  font-weight: bolder;
+  text-decoration: none;
+  color: white;
+  width: 50%;
+}
+
+.join a {
+  padding: 1rem;
+  text-decoration: none;
+  color: white;
 }
 
 .spotLights img {
@@ -110,28 +167,12 @@ button:hover {
 }
 
 .event {
-  display: table;
-  text-align: center;
   grid-area: 2 / 1 / 3 / 2;
-
-  background-color: white;
-  padding: 1rem;
-  text-align: center;
-  border-radius: 8px;
-  border: 2px #e5e5e5 solid;
-  font-size: 1em;
 }
 
 .weather {
   grid-area: 3 / 1 / 4 / 2;
   padding: 0.5em;
-
-  background-color: white;
-  padding: 1rem;
-  text-align: center;
-  border-radius: 8px;
-  border: 2px #e5e5e5 solid;
-  font-size: 1em;
 }
 
 .weather img {
@@ -162,11 +203,6 @@ button:hover {
 
 .join {
   display: none;
-  padding: 1rem;
-  text-align: center;
-  border-radius: 8px;
-  border: 2px #e5e5e5 solid;
-  font-size: 1em;
 }
 
 /* Header/navigation style*/
@@ -180,7 +216,7 @@ header {
 .today {
   color: white;
   font-size: 1em;
-margin-bottom: .5em;
+  margin-bottom: 0.5em;
   text-align: center;
   grid-column: 1 / 3;
 }
@@ -325,7 +361,7 @@ table {
 }
 
 tr:first-child th {
-  background-color: rgba(0, 73, 146, 0.075);;
+  background-color: rgba(0, 73, 146, 0.075);
   font-size: 24px;
   padding: 10px;
   font-size: 90%;
@@ -339,7 +375,7 @@ td {
 }
 
 th {
-  background-color: rgba(0, 73, 146, 0.075);;
+  background-color: rgba(0, 73, 146, 0.075);
   font-size: 90%;
 }
 
@@ -423,7 +459,8 @@ form label.sbs {
 form textarea {
   width: 103%;
   background-color: rgba(0, 0, 0, 0.1);
-  padding: 0.2rem;
+  border-radius: 8px;
+  padding: 0.5rem;
 }
 
 form input.submitBtn {
@@ -500,7 +537,7 @@ form label.top input:required {
   padding: 0.5em;
   margin: 0.5em;
   border-radius: 8px;
-  background-color: rgba(0, 73, 146, 0.075);;
+  background-color: rgba(0, 73, 146, 0.075);
 }
 
 .list-view-btn {
@@ -523,60 +560,35 @@ form label.top input:required {
   background-color: rgba(0, 73, 146, 0.075);
 }
 
+/* contact */
 
-.spotlights {
-
-  background-color: rgb(0, 38, 77);
-  text-align: center;
-  border-radius: 8px;
-  padding: 10px;
+.feedback {
+  background-color: antiquewhite;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: 0.5em;
 }
 
-
-
-.spotlight:last-child{
-  display: none;
-}
-
-.spotlight img {
-width: 50%;
-padding-top: 10px;
-}
-
-.spotlight {
-  background-color: white;
-  border-radius: 8px;
-
-    margin-bottom: 0.5rem;
-padding: 1em;
-    font-size: larger;
-}
-
-.spotlight p{
-color: rgb(0, 73, 146);
-font-weight: bolder;
-}
-
-.join-button a {
-  padding: 1rem;
-  text-decoration: none;
-  color: white;
-}
-
-.join button {
+.messageButton {
   display: block;
   padding: 1rem;
-    background-color: rgb(0, 73, 146);
-    border-radius: 8px;
-    margin: 0.25em auto;
-    font-weight: bolder;
+  background-color: rgb(0, 73, 146);
+  border-radius: 8px;
+  margin: 0.25em auto;
+  font-weight: bolder;
   text-decoration: none;
   color: white;
-width: 50%;
+  width: 50%;
 }
 
-.join a {
-  padding: 1rem;
-  text-decoration: none;
-  color: white;
+#feedback {
+  background-color: white;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: 1em;
+  text-align: center;
 }
