--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,7 +1,5 @@
 @media only screen and (min-width: 1100px) {
-  main {
-    grid-template-rows: repeat(2, 1fr);
-  }
+
   header {
     align-items: center;
     grid-template-columns: repeat(3, 1fr);
@@ -146,10 +144,13 @@
     max-height: 36em;
   }
 
-  .thank-you-main {
-    display: flex;
-    padding: 2em;
+  
+
+  .thank-you {
+    max-width: 55em;
   }
+
+
 
   .join-form {
     grid-column: 2/3;
@@ -169,4 +170,19 @@
   .spotlight:last-child {
     display: block;
   }
+  
+  .contact-info {
+    grid-column: 2/3;
+      grid-row: 1/2;
+      height: fit-content;
+      margin: 4em;
+  }
+
+  .contact-form {
+    max-width: 40em;
+    margin-left: 5em;
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+
 }
