--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -463,7 +463,7 @@ form textarea {
   padding: 0.5rem;
 }
 
-form input.submitBtn {
+form input.submit {
   display: grid;
   border: none;
   background-color: black;
@@ -471,10 +471,11 @@ form input.submitBtn {
   border-radius: 8px;
   padding: 0.75rem 1.5rem;
   margin: 0 0 2rem 2%;
-  width: 95%;
+  width: 50%;
+  justify-self: center;
 }
 
-form input.submitBtn:hover {
+form input.submit:hover {
   font-weight: bolder;
   cursor: pointer;
   background-color: rgb(0, 73, 146);
@@ -489,7 +490,7 @@ form label.top input:required {
   font-weight: bold;
 }
 
-.cost {
+.price {
   background-color: rgb(0, 73, 146);
   color: white;
   padding: 0.25rem 1rem;
@@ -591,4 +592,9 @@ form label.top input:required {
   right: 0;
   padding: 1em;
   text-align: center;
+}
+
+.contact-info {
+
+  margin: .5em;
 }
