--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,4 +1,9 @@
-@media only screen and (min-width: 1100px) {
+@media only screen and (min-width: 1300px) {
+
+main {
+  max-width: 95em;
+  margin: auto;
+}
 
   header {
     align-items: center;
@@ -37,10 +42,10 @@
   .callToAction {
     grid-row: 1/3;
     grid-column: 2/3;
-    background-color: black;
+    background-color: rgb(0, 38, 77);
     z-index: 0;
     border-radius: 8px;
-    padding: 20px;
+    padding: 10px;
   }
 
   .spotLights {
@@ -83,12 +88,12 @@
   }
 
   .weather img {
-    width: 75px;
+    width: 110px;
   }
 
   .weather h3 {
     font-size: large;
-    padding-top: 0;
+    padding-top: 1em;
   }
 
   #current-temp {
@@ -98,10 +103,6 @@
   .discover-content {
     display: flex;
     flex-wrap: wrap;
-  }
-  article {
-    width: 22.5em;
-    margin-bottom: 10px;
   }
 
   /* Join page */
@@ -188,5 +189,10 @@
     grid-column: 1/2;
     grid-row: 1/2;
   }
+
+  form textarea {
+    width:102%;
+    
+    }
 
 }
