--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,9 +1,8 @@
 @media only screen and (min-width: 1300px) {
-
-main {
-  max-width: 95em;
-  margin: auto;
-}
+  main {
+    max-width: 95em;
+    margin: auto;
+  }
 
   header {
     align-items: center;
@@ -48,6 +47,11 @@ main {
     padding: 10px;
   }
 
+  .callToAction a {
+    font-size: 1.5em;
+    width: 10em;
+  }
+
   .spotLights {
     grid-area: 1 / 3 / 4 / 4;
     align-items: center;
@@ -68,10 +72,6 @@ main {
   .join {
     grid-row: 3/4;
     grid-column: 1/2;
-  }
-  .join button {
-    padding: 15px;
-    width: 100%;
   }
 
   .news {
@@ -149,13 +149,9 @@ main {
     max-height: 36em;
   }
 
-  
-
   .thank-you {
     max-width: 55em;
   }
-
-
 
   .join-form {
     grid-column: 2/3;
@@ -175,12 +171,12 @@ main {
   .spotlight:last-child {
     display: block;
   }
-  
+
   .contact-info {
     grid-column: 2/3;
-      grid-row: 1/2;
-      height: fit-content;
-      margin: 4em;
+    grid-row: 1/2;
+    height: fit-content;
+    margin: 4em;
   }
 
   .contact-form {
@@ -191,8 +187,6 @@ main {
   }
 
   form textarea {
-    width:102%;
-    
-    }
-
+    width: 102%;
+  }
 }
