--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -60,7 +60,7 @@ strong {
 .callToAction h2 {
   grid-column: 1/3;
   grid-row: 1/2;
-  padding: 2rem;
+  padding: 1rem;
   color: white;
   background-color: #000000c9;
   margin: 0;
@@ -71,22 +71,21 @@ strong {
   border-top-right-radius: 8px;
 }
 
-.callToAction button {
+.callToAction a {
   grid-column: 2/3;
   grid-row: 2/3;
   align-self: end;
   padding: 10px;
   border-radius: 8px;
   margin-bottom: 1.5rem;
-  margin-right: 1.5rem;
   font-size: 1em;
+  width: 6em;
   color: #ffffff;
   background-color: #000000c9;
   border: none;
-  
 }
 
-button:hover {
+a:hover {
   box-shadow: 0 0 15px rgb(0, 0, 0);
   cursor: pointer;
   font-weight: bolder;
@@ -138,20 +137,21 @@ button:hover {
   font-weight: bolder;
 }
 
-.join-button a {
+.join-button,
+.join-two a {
   padding: 1rem;
   text-decoration: none;
   color: white;
-  
+  z-index: 3;
 }
 
-.join button {
+.join-two {
   display: block;
   padding: 1rem;
   background-color: rgb(0, 38, 77);
   border-radius: 8px;
   margin: 0.25em auto;
-font-size: 1.25em;
+  font-size: 1.25em;
   text-decoration: none;
   color: white;
   width: 50%;
@@ -179,7 +179,7 @@ font-size: 1.25em;
 }
 
 .weather img {
-float: left;
+  float: left;
   width: 100px;
   padding: 0;
   padding-left: 2.5em;
@@ -337,7 +337,6 @@ article {
   padding-right: 0.75em;
   font-weight: bold;
   text-align: center;
-
 }
 
 article img {
@@ -448,7 +447,6 @@ form div {
 
 form label.top input,
 form label.top select {
-  -webkit-appearance: none;
   display: block;
   border: 2px #e5e5e5 solid;
   border-radius: 80px;
@@ -460,14 +458,13 @@ form label.top select {
 form label.sbs {
   display: block;
   padding: 0.75rem 0;
-  color: #1c60aa;
+  color: rgb(0, 73, 146);
 }
 
 form textarea {
-width:108%;
+  width: 108%;
   background-color: rgba(0, 0, 0, 0.1);
   border-radius: 8px;
-
 }
 
 form input.submit {
@@ -575,7 +572,7 @@ form label.top input:required {
 }
 
 .feedback {
-  background-color: antiquewhite;
+  background-color: white;
   position: absolute;
   top: 0;
   left: 0;
@@ -606,9 +603,7 @@ form label.top input:required {
 }
 
 .contact-info {
-
-  padding: .5em;
-
+  padding: 0.5em;
 }
 
 .contact-page-img {
