--- a/temple-inn-and-suite/css/small.css
+++ b/temple-inn-and-suite/css/small.css
@@ -25,17 +25,17 @@ main {
 article {
   display: block;
   border-radius: 10px;
-  padding: 0.75em;
+  padding: 0em;
   text-align: center;
   box-shadow: 2px 2px 5px rgb(95, 95, 95);
+  overflow: hidden;
 }
-h2 {
-  display: none;
-}
+
 h1 {
   font-size: 1.25em;
   text-shadow: 1.5px 2px 0px  #8bd02367;
 }
+
 
 /* Header */
 
@@ -134,10 +134,314 @@ footer {
 
 /* Home */
 
+.home-headder{
+  display: none;
+}
+
 .spotlights {
   display: block;
   border-radius: 10px;
   padding: 0.75em;
   text-align: center;
   box-shadow: 2px 2px 5px rgb(95, 95, 95);
+}
+.calltoactionimage {
+  border-radius: 8px 8px 0 0 ;
+  width: 100%;
+  padding: 0;
+}
+.callToAction {
+  display: grid;
+  grid: 1fr 1fr / 1fr 1fr;
+}
+.callToAction picture {
+  grid-column: 1/3;
+  grid-row: 1/6;
+  z-index: -1;
+}
+.callToAction a {
+  grid-column: 1/3;
+  grid-row: 1/3;
+  font-size: 1.5em;
+  font-weight: bold;
+  color: black;
+  background-color: rgba(255, 255, 255, 0.39);
+  border: none;
+  text-decoration: none;
+  padding-top: 6%;
+}
+.callToAction a:hover {
+  cursor: pointer;
+  font-weight:bolder;
+  color: white;
+}
+.visittoday {
+  font-size: 1em;
+  grid-column: 1/3;
+}
+
+/* Reservation */
+
+body {
+  height: 100vh;
+  font-size: 16px;
+  font-family: Montserrat, helvetica, sans-serif;
+}
+em {
+  font-size: smaller;
+}
+.grid {
+  display: grid;
+  grid-gap: .5rem;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+
+input,
+button,
+select,
+textarea {
+  padding: 0.5rem;
+  margin-bottom: .25rem;
+}
+
+label {
+  font-size: .7rem;
+  font-weight: 700;
+  width: 200px;
+}
+
+input:focus {
+  box-shadow: 0 0 10px #bbb;
+}
+fieldset {
+  background-color: #eee;
+  border: 1px solid #ccc;
+}
+
+legend {
+  font-family: Arial, sans-serif;
+  font-size: .6rem;
+}
+.nestedfieldset {
+  background-color: #fff;
+  margin-bottom: 2rem;
+}
+
+label {
+  display: block;
+}
+
+input[type="button"] {
+  color: blue;
+}
+input[type="button"]:hover {
+  background-color: #ddf;
+}
+
+input:invalid {
+  background-color: #fdd;
+  color: #000;
+}
+input:valid {
+  background-color: #dfd;
+  color: #000;
+}
+
+.flexly {
+  display: flex;
+  align-items: center;
+}
+
+input[type="radio"], input[type="checkbox"] {
+  width: 20px;
+  height: 20px;
+  margin-right: 1rem;
+}
+
+.selection {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+}
+
+#ratingvalue {
+  margin: 0 15px;
+  color: #2075ff;
+}
+
+#selected {
+  position: absolute;
+  top: 550px;
+  left: 300px;
+  border: 1px solid #999;
+  background-color: #abe;
+  padding: 10px;
+  font-weight: 700;
+  display: none;
+}
+
+.bottom {
+  display: flex;
+  align-content: bottom;
+}
+
+.sbutton {
+  margin: .1rem;
+  background-color: #abe;
+  font-weight: 700;
+  border: 1px solid #777;
+  box-shadow: 0 0 7px #777;
+}
+
+/* Temples */
+
+.cards {
+  width: auto;
+}
+
+.directory {
+  text-align: center;
+}
+
+.list-view img,
+.card-view > section h3 {
+  display: none;
+}
+
+.card-view img {
+  display: block;
+  width: 60%;
+  margin: auto;
+}
+
+.list-view > section h3 {
+  display: block;
+}
+
+.list-view section {
+  display: grid;
+  grid-template-columns: 1fr;
+  padding: 0.5em;
+}
+
+.card-view {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.card-view section {
+  padding: 0.5em;
+  margin: 0.5em;
+  border-radius: 8px;
+  background-color: rgba(0, 73, 146, 0.075);
+}
+
+.list-view-btn {
+  padding: 0.5em;
+}
+
+.list-view-btn button {
+  padding: 0.2rem;
+  background-color: white;
+  border-radius: 8px;
+  margin: 1em;
+  border: none;
+}
+
+.list-view section:nth-child(2n) {
+  background-color: rgba(0, 73, 146, 0.199);
+}
+
+.list-view section {
+  background-color: rgba(0, 73, 146, 0.075);
+}
+
+/* like button */
+:root {
+  --red: rgb(209, 3, 3);
+  --white: #fff;
+  --black: #000;
+}
+.btn {
+  width: 200px; height: 88px;
+  outline: 0;
+  border: 2px solid #ccc;
+  color: #000;
+  cursor: pointer;
+  overflow: hidden;
+  position: relative;
+  display:flex;
+  justify-content: space-between;
+  box-shadow: 0px 3px 25px rgba(0, 0, 0, 0.05);
+  transition: 1.5s cubic-bezier(.21,.04,.26,.99);
+}
+.btn:hover {
+  box-shadow: 0px 3px 25px rgba(0, 0, 0, 0.2);
+  border-color: var(--red);
+}
+.btn-like {
+  padding: 1.5rem 1.5rem 1.5rem 6rem;
+  font-size: 2rem;
+  border-radius: 10px;
+  background: #fff;
+  transition: 1.5s cubic-bezier(.21,.04,.26,.99);
+}
+.btn-like.liked {
+  background: var(--red);
+  border-color: var(--red);
+}
+/*-- Button Icon -- */
+.btn-icon {
+  display: inline-block;
+  width: 32px;
+  height: 36px;
+  position: absolute;
+  left: 1.5rem;
+  transition: 1s cubic-bezier(.21,.04,.26,.99);
+  transform: rotate(0deg)
+}
+.btn:hover .btn-icon {
+  color: var(--red);
+}
+.btn.liked:hover .btn-icon {
+  color: var(--black);
+}
+.liked .btn--icon-default {
+  transform: rotate(-90deg)
+}
+.btn:not(.liked).btn--icon-liked {
+  transform: rotate(-90deg)
+}
+.liked .btn--icon-default,
+.btn--icon-liked {
+  opacity: 0;
+  color: #fff;
+  position: absolute;
+}
+.btn--icon-default,
+.liked .btn--icon-liked {
+  opacity: 1;
+  left: 1.5rem;
+}
+/*-- Button Content -- */
+.btn-content {
+  transition: transform 0.1s ease;
+  display: inline-block;
+  /* position: absolute;
+  right: 0; */
+}
+.liked .btn-content {
+  color: var(--white);
+}
+.btn:hover.liked .btn-content {
+  color: var(--black);
+}
+.btn:not(.liked) .btn-content--liked {
+  transform: translate(110px)
+}
+.btn:not(.liked) .btn-content--default {
+  transform: translate(-56px)
+}
+.liked .btn-content--default {
+  transform: translate(24px)
 }
