--- a/temple-inn-and-suite/css/medium.css
+++ b/temple-inn-and-suite/css/medium.css
@@ -1,27 +1,47 @@
 @media only screen and (min-width: 32.5em) {
-	.navigation {
-		display: flex;
-	}
-	.navigation li {
-		display: block;
-		flex: 1 1 auto;
-	}
-	.navigation a {
-		text-align: center;
-	}
-	.navigation li:first-child {
-		display: none;
-	}
-
-	.footer-seperation {
+	main {
 		display: grid;
-		grid: 1fr / 1fr 1fr ;
-		align-items: center;
-	  }
+	}
+  .navigation {
+    display: flex;
+  }
+  .navigation li {
+    display: block;
+    flex: 1 1 auto;
+  }
+  .navigation a {
+    text-align: center;
+  }
+  .navigation li:first-child {
+    display: none;
+  }
 
-	  .footer-info, .footer-info-two {
-		  display: inline;
-		  padding-bottom: 5px;
-	  }
+  .footer-seperation {
+    display: grid;
+    grid: 1fr / 1fr 1fr;
+    align-items: center;
+  }
 
+  .footer-info,
+  .footer-info-two {
+    display: inline;
+    padding-bottom: 5px;
+  }
+  .services-main {
+    grid-template-columns: 1fr 1fr;
+  }
+  h2 {
+    grid-column: 1/3;
+  }
+  .card-view {
+    grid-template-columns: repeat(2, 1fr);
+    margin-left: 2em;
+    margin-right: 2em;
+    margin-bottom: 2em;
+  }
+
+  .reception-image,
+  .missionary-image {
+    grid-column: 1 / 2;
+  }
 }
